--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <h4>2016-2018</h4>
                                 <h4 class="subheading">Choosing a specialisation. </h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">In the thrid year I had to choose if I wanted to specialize in Media Design or Networking and Security. I chose Networking and Security because I was interested in how computers connect.</p></div>
+                            <div class="timeline-body"><p class="text-muted">In the third year I had to choose if I wanted to specialize in Media Design or Networking and Security. I chose Networking and Security because I was interested in how computers connect.</p></div>
                         </div>
                     </li>
 					<li>
